Adding some links to draft of upcoming edition

--- a/newsletter/2020-07-12.html
+++ b/newsletter/2020-07-12.html
@@ -57,8 +57,8 @@
 
       <ul>
 
-        <li>TK</li>
-        <li>TK</li>
+        <li>Harper's letter on cancel culture: https://harpers.org/a-letter-on-justice-and-open-debate/ </li>
+        <li>NYT column on Jaws as metaphor for COVID: https://www.nytimes.com/2020/07/07/opinion/coronavirus-jaws-movie.html </li>
         <li>TK</li>
         <li>TK</li>
         <li>TK</li>
