Adding more links for 7/12

--- a/newsletter/2020-07-12.html
+++ b/newsletter/2020-07-12.html
@@ -59,6 +59,12 @@
 
         <li>Harper's letter on cancel culture: https://harpers.org/a-letter-on-justice-and-open-debate/ </li>
         <li>NYT column on Jaws as metaphor for COVID: https://www.nytimes.com/2020/07/07/opinion/coronavirus-jaws-movie.html </li>
+        <li>Elitzer on yield farming: https://bankless.substack.com/p/aquaponic-yield-farming</li>
+        <li>Coinbase listings' effect on prices: https://decrypt.co/33311/coinbase-effect-crypto-temporary-high</li>
+        <li>WireCard bankruptcy: https://www.nytimes.com/2020/06/25/business/wirecard-insolvency-bankruptcy.html</li>
+        <li>AML bitcoin indictment: https://www.courthousenews.com/lobbyist-abramoff-charged-in-cryptocurrency-case/</li>
+        <li>Square supporting BTC design: https://medium.com/@squarecrypto/bringing-together-the-bitcoin-design-community-b89e5fbe080f</li>
+        <li>Crypto for Black Lives: https://coinnounce.com/the-giving-block-launches-crypto-for-black-lives-campaign/</li>
         <li>TK</li>
         <li>TK</li>
         <li>TK</li>
