Final copy for 7-12

--- a/newsletter/2020-07-12.html
+++ b/newsletter/2020-07-12.html
@@ -42,7 +42,6 @@
 
   <body>
 
-
     <div id="palette">
 
       <span id="flag">
@@ -52,22 +51,35 @@
 
       <br>
 
-      <p>TK intro TK:</p>
-
+      <p>The politician Rahm Emanuel once famously said, "Never let a crisis go to waste."</p>
+      <p>The tech world is clearly taking that idea to heart lately, for both better and worse, I think:</p>
 
       <ul>
 
-        <li>Harper's letter on cancel culture: https://harpers.org/a-letter-on-justice-and-open-debate/ </li>
-        <li>NYT column on Jaws as metaphor for COVID: https://www.nytimes.com/2020/07/07/opinion/coronavirus-jaws-movie.html </li>
-        <li>Elitzer on yield farming: https://bankless.substack.com/p/aquaponic-yield-farming</li>
-        <li>Coinbase listings' effect on prices: https://decrypt.co/33311/coinbase-effect-crypto-temporary-high</li>
-        <li>WireCard bankruptcy: https://www.nytimes.com/2020/06/25/business/wirecard-insolvency-bankruptcy.html</li>
-        <li>AML bitcoin indictment: https://www.courthousenews.com/lobbyist-abramoff-charged-in-cryptocurrency-case/</li>
-        <li>Square supporting BTC design: https://medium.com/@squarecrypto/bringing-together-the-bitcoin-design-community-b89e5fbe080f</li>
-        <li>Crypto for Black Lives: https://coinnounce.com/the-giving-block-launches-crypto-for-black-lives-campaign/</li>
-        <li>TK</li>
-        <li>TK</li>
-        <li>TK</li>
+        <li><strong>Reuters</strong> reported that <strong>Coinbase</strong> has begun planning an initial public offering on the stock market, possibly by the end of the year. <em>Link: <a href="https://tinyurl.com/y7l3syw4">https://tinyurl.com/y7l3syw4</a></em></li>
+
+        <li><strong>Decentralized finance remains red hot.</strong> According to data from <strong>Dune Analytics</strong>, about 240,000 users are now active in the space, with more than <strong>$2 billion in assets</strong> deposited. The number of "DeFi" protocols has more than doubled this year, although activity is heavily concentrated in just the top five. (<em>Link: <a href="https://tinyurl.com/y6wlozhq">https://tinyurl.com/y6wlozhq</a></em>) Among the notable new entrants is <strong>Aave</strong>, which launched a service on Ethereum last week that lets users take out loans without collateral. (<em>Link: <a href="https://tinyurl.com/y89an53m">https://tinyurl.com/y89an53m</a></em>) Meanwhile, VC <strong>Dan Elitzer</strong> took an in-depth look at the increasing phenomenon of "yield farming" on the DeFi platforms. Scroll down at <a href="https://tinyurl.com/ybxkj28k">https://tinyurl.com/ybxkj28k</a> for his full take.</li>
+
+        <li><strong>Ethereum transaction fees</strong> have been soaring as a percentage of miner revenue, far surpassing Bitcoin's fees despite the recent halving, according to <strong>Larry Cermak</strong>, research director at The Block. <em>Link: <a href="https://tinyurl.com/y7juxqyt">https://tinyurl.com/y7juxqyt</a></em></li>
+
+        <li><strong>American law enforcement agencies</strong> have been buying personal information about citizens from data brokers that they would normally need a warrant to obtain. <strong> Sen. Ron Wyden</strong> is proposing a law to ban the practice. (Motherboard) <em>Link: <a href="https://tinyurl.com/y8rhn3gz">https://tinyurl.com/y8rhn3gz</a></em></li>
+
+         <li><strong>The Chinese Communist Party's efforts to thwart democracy</strong> are growing more aggressive both at home and abroad. Vice's <strong>David Gilbert</strong> reports that the "Great Firewall" is beginning to encircle Hong Kong, with major U.S. tech platforms likely to be blocked soon. (<em>Link: <a href="https://tinyurl.com/ybd6bc3o">https://tinyurl.com/ybd6bc3o</a></em>) In Beijing, authorities arrested law professor <strong>Xu Zhangrun</strong>, who was previously critical of president <strong>Xi Jinping</strong>'s handling of the COVID pandemic. (<em>Link: <a href="https://tinyurl.com/y7uzckoh">https://tinyurl.com/y7uzckoh</a></em>) Meanwhile, FBI director <strong>Christopher Wray</strong> said at an event at the <strong>Hudson Institute</strong> in Washington that his agency is now opening a new China-related counterintelligence investigation <strong>approximately every 10 hours</strong>. American healthcare organizations, pharmaceutical companies, and academic institutions are among the organizations increasingly targeted by Chinese spying, Wray said. <em>Link: <a href="https://tinyurl.com/ycjzwkud">https://tinyurl.com/ycjzwkud</a></em></li>
+
+
+        <li><strong>Tether has blacklisted more than three dozen Ethereum addresses</strong> at the request of law enforcement, rendering millions of dollars of USDT tokens held by those addresses unusable. (The Block) <em>Link: <a href="https://tinyurl.com/yavfgsqz">https://tinyurl.com/yavfgsqz</a></em></li>
+
+        <li><strong>Arca Labs</strong> says it has launched an SEC-approved fund that tracks U.S. Treasury bonds using the Etehreum ledger. The offering is apparently the first token-based investment approved under the Investment Company Act of 1940 by the <strong>Securies and Exchange Commission</strong>, which has generally opposed such vehicles in the past. (CoinDesk) <em>Link: <a href="https://tinyurl.com/ycpv6b47">https://tinyurl.com/ycpv6b47</a></em></li>
+
+        <li><strong>A who's who of crypto startups</strong> received loans totaling over $30 million under the U.S. government's Paycheck Protection Program (PPP), writes CoinDesk's <strong>Nikhilesh De</strong>. <em>Link: <a href="https://tinyurl.com/y988lovr">https://tinyurl.com/y988lovr</a></em></li>
+
+       <li><strong>TikTok</strong> saw an organized effort to pump the price of <strong>Dogecoin</strong>. Groan... (The Block) <em>Link: <a href="https://tinyurl.com/ybhrnslh">https://tinyurl.com/ybhrnslh</a></em></li>
+
+        <li><strong>Margaret Harding McGill</strong> of Axios reports that a broadband program for low-income internet users in the U.S. has been grossly undertilized. <em>Link: <a href="https://tinyurl.com/y8b2xfws">https://tinyurl.com/y8b2xfws</a></em></li>
+
+        <li>Finally, a heads-up about a great cause: <strong>SMASH</strong>, an education program by the <strong>Kapor Center</strong> to help youth from underrepresented groups who are interested in tech, has launched a new donor drive. Through July 31, founders <strong>Mitch Kapor</strong> and <strong>Freada Kapor Klein</strong> will be personally matching your donations. Please help 'em out! <em>Link: <a href="https://tinyurl.com/ybaursw6">https://tinyurl.com/ybaursw6</a></em></li>
+
+
 
       </ul>
 
