Final copy for 7/26/20

--- a/newsletter/2020-07-26.html
+++ b/newsletter/2020-07-26.html
@@ -55,35 +55,27 @@
 
       <br>
 
-      <p>The latest headlines:</p>
+      <p>Important developments this time regarding both Big Tech and the upstarts against it:</p>
 
       <ul>
 
-        <li>Big Tech execs testifying Monday.</li>
+        <li>The chief executives of <strong>Amazon</strong>, <strong>Apple</strong>, <strong>Facebook</strong>, and <strong>Google</strong> are scheduled to testify Wednesday before a U.S. House subcommittee on antitrust issues. The hearing is also likely feature questions on hateful content and allegations of anti-conservative bias on tech platforms, although there has been scant hard evidence of the latter. (The Hill) <em>Link: <a href="https://tinyurl.com/y6fsjulp">https://tinyurl.com/y6fsjulp</a></em></li>
 
-        <li>WSJ says Disney has cut FB ad spend. <em>Link: <a href="https://tinyurl.com/y23ayee4">https://tinyurl.com/y23ayee4</a></em></li>
+        <li><strong>Federal regulators</strong> said they will allow banks to offer <strong>crypto custody in the U.S.</strong>. The decision effectively opens participation in crypto markets to a much wider audience in America. (CoinTelegraph) <em>Link: <a href="https://tinyurl.com/y563g2vh">https://tinyurl.com/y563g2vh</a></em></li>
 
-        <li>Office of Comptroller of the Currency allows banks to do crypto custody in the U.S.</li>
+        <li><strong>America's major credit-card companies continued their embrace of crypto.</strong> In a new blog post, <strong>Visa</strong> offered further details of its plans around <strong>bitcoin</strong> and other tokens. (</em>See the text at <a href="https://tinyurl.com/y2tvcz9b">https://tinyurl.com/y2tvcz9b</a></em>) Meanwhile, <strong>Mastercard</strong> expanded its cryptocurrency program to make it easier for companies in the space to issue their own payment cards. London-based <strong>Wirex</strong> became the first to take advantage of the change. (CNBC) <em>Link: <a href="https://tinyurl.com/y3zhyr68">https://tinyurl.com/y3zhyr68</a></em></li>
 
-        <li>US passport isn't so useful anymore. Link: https://www.nytimes.com/2020/07/23/opinion/passport-coronavirus-travel.html </li>
+        <li>CoinDesk's <strong>David Pan</strong> reports that China's state-backed Blockchain-based Service Network (BSN) has integrated with six public chains -- <strong>Ethereum</strong>, <strong>EOS</strong>, <strong>Tezos</strong>, <strong>NEO</strong>, <strong>Nervos</strong>, and <strong>IRISnet</strong>. The move advances China's goal to be the world's number-one provider of blockchain infrastructure. It may also signal easy integration down the line among the six public chains and China's official national cryptocurrency, which is in early-stage testing. <em>Link: <a href="https://tinyurl.com/y5cvu9cd">https://tinyurl.com/y5cvu9cd</a></em></li>
 
+        <li><strong>South Korea</strong> finalized a new cryptocurrency income tax of 20 percent. (CoinTelegraph) <em>Link: <a href="https://tinyurl.com/y6zmqzz4">https://tinyurl.com/y6zmqzz4</a></em></li>
 
-        <li>Tanner Hoban/Cosnensys publishes new review of Eth 2.0's economics. Attacks are easier to scale!</li>
+        <li><strong>New security concerns surfaced about Ethereum.</strong> In a new "economic review" whitepaper, <strong>Tanner Hoban</strong> and <strong>Tom Borgers</strong> of <strong>Consensys</strong> said malicious attacks may scale more easily after the upcoming Ethereum 2.0 update due to the system's reliance on fewer validators. (<em>Full paper is available at <a href="https://tinyurl.com/yxctqagj">https://tinyurl.com/yxctqagj</a></em>) Separately, Ethereum founder <strong>Vitalik Buterin</strong> said he's concerned that the rise in fees versus miner revenues on the current network may be introducing new vulnerabilities. <em>Link: <a href="https://tinyurl.com/y5zv7fr9">https://tinyurl.com/y5zv7fr9</a></em></li>
 
-        <li>7/21 tweet from Vitalik expresses concerns about eth security</li>
+        <li>Variety's <strong>Michael Schneider</strong> and <strong>Kate Aurthur</strong> reported that Hollywood is quietly killing cable through a strategy of purposeful neglect in lieu of streaming platforms. <em>Link: <a href="https://tinyurl.com/y39dt7mt">https://tinyurl.com/y39dt7mt</a></em></li>
 
-        <li>CoinDesk reprots that China's official crypto is integrating with six cryptos including Tezos, etc.</li>
+        <li>The Wall Street Journal's <strong>Suzanne Vranica</strong> reports that <strong>Disney</strong> has cut its advertising spend on <strong>Facebook</strong>, effectively joining a growing corporate boycott of the platform due to its lax policing of hate speech. <em>Link: <a href="https://tinyurl.com/y23ayee4">https://tinyurl.com/y23ayee4</a></em> (Paywall)</li>
 
-        <li>South Korea finalizes new tax scheme for crypto.</li>
-
-        <li>Visa, Mastercard expand new crypto offerigns. See visa blog, the blockcrypto.com for Mastercard piece.</li>
-
-        <li>Dragonfly guy blogged on Medium about automated market makers. Hmmmm....</li>
-
-        <li>Placeholder blogs thesis about Balancer on placeholder.vc/blog</li>
-
-        <li>blocknative.com blogs about $8M threat from MakerDAO system.</li>
-
+        <li>Writing for the MIT Technology Review, <strong>Abby Ohlheiser</strong> says it may be too late for social platforms to stop the <strong>QAnon</strong> conspiracy theory with measures such as fact checks and account suspensions. She says any effective solution must also include an offline component in which friends and family of QAnon adherents are trained to recognize and de-program their loved ones from what amounts to a cult. <em>Link: <a href="https://tinyurl.com/y3or94a3">https://tinyurl.com/y3or94a3</a></em></li>
 
 
 
@@ -92,20 +84,12 @@
 
 <!--
 
-        <li>NYT column on Jaws as metaphor for COVID: https://www.nytimes.com/2020/07/07/opinion/coronavirus-jaws-movie.htmlEdsall on politicization of human nature itself: https://www.nytimes.com/2020/07/08/opinion/trump-politics-psychology.htmlNew York Times columnist <strong>David Leonhardt</strong> has been speaking with economists, politicians, and business executives about what a post-COVID economy may look like. <em>Link: <a href="https://tinyurl.com/y9acbfu9">https://tinyurl.com/y9acbfu9</a></em></li>
-
-
-
         <li>Ex-Google intern on how it turned her off SV: https://onezero.medium.com/my-summer-internship-at-google-turned-me-off-silicon-valley-forever-37a978fc7da8</li>
 
         <li>https://oonwoye.com/2020/07/06/diversity-and-big-tech-media/</li>
 
-        <li>Crypto for Black Lives: https://coinnounce.com/the-giving-block-launches-crypto-for-black-lives-campaign/</li>
 
         <li>POCIT: https://peopleofcolorintech.com/about/</li>
-
-        <li>Haaretz ran a harrowing firsthand account from a Uigyer who escaped: https://www.haaretz.com/world-news/.premium.highlight.MAGAZINE-a-million-people-are-jailed-at-china-s-gulags-i-escaped-here-s-what-goes-on-inside-1.7994216</li>
-
 
 -->
       </ul>
