Final copy for 23 August 2020

--- a/newsletter/2020-08-23.html
+++ b/newsletter/2020-08-23.html
@@ -56,14 +56,33 @@
 
       <br>
 
-      <p>The latest decentralization headlines:</p>
+      <p><em>"I think I'll buy a rental property. After all, they're not making more land!"</em></p>
+
+      <p>They're also not <a href="https://www.investopedia.com/tech/what-happens-bitcoin-after-21-million-mined/">making more bitcoin</a>. Not for much longer, at least. As a bonus, it is guaranteed never to need a leaky roof replaced or get hit by a tornado.</p>
+
+      <p>(Full disclosure: I am long bitcoin. Obviously.)</p>
+
+      <p>Let's get to some headlines:</p>
 
       <ul>
 
-        <li>TKTK</li>
-        <li>TKTK</li>
-        <li>TKTK</li>
-        <li>TKTK</li>
+        <li><strong>Ethereum continues to rule decentralized finance, although some analysts are concerned about the longer term.</strong> CoinDesk's <strong>Danny Nelson</strong> reported that stablecoin issuer <strong>Tether</strong> shifted $1 billion of its USDT token from the <strong>Tron</strong> blockchain to Ethereum on Thursday, sapping more than one-fifth of Tran's total USDT reserves. (<em>Link: <a href="https://tinyurl.com/y4ujoxdm">https://tinyurl.com/y4ujoxdm</a></em>) However, <strong>Cointelegraph</strong> fretted that "a storm is brewing" for Ethereum as mining has slowed and longtime holders of ETH tokens have historically strong incentives to sell right now. <em>Link: <a href="https://tinyurl.com/y2re897d">https://tinyurl.com/y2re897d</a></em></li>
+
+        <li>ICYMI: My former Dow Jones colleague <strong>Mike Casey</strong> recently weighed in on the pros and cons of <strong>modern monetary theory</strong>, especially in light of the current virus-driven economic downturn. While most crypto folks are skeptical of MMT, which advocates open-ended printing of fiat money as a form of economic stimulus, Casey says the "dangerous idea" might have some merit under present circumstances. (<em>Link: <a href="https://tinyurl.com/y3dub36e">https://tinyurl.com/y3dub36e</a></em>) I've generally been (and remain) skeptical of MMT myself, frankly. (<em>Link: <a href="https://tinyurl.com/y6nebnt6">https://tinyurl.com/y6nebnt6</a></em>) But I also think it's good to give other perspectives a fair hearing, especially when they're coming from someone with Mike's level of experience.</li>
+
+        <li>CoinDesks <strong>Leigh Cuen</strong> took a look at Cuba's growing bitcoin community. She paints a picture that neatly encapsulates many of the use cases that crypto proponents hold dear, including easy cross-border payments and empowering people without traditional bank accounts, especially in poorer countries. <em>Link: <a href="https://tinyurl.com/y2yb7jog">https://tinyurl.com/y2yb7jog</a></em></li>
+
+        <li>The <strong>World Economic Forum</strong> published a new report on how the "business of data" is changing, including contributions from worldwide web creater Tim Berners-Lee and others. <em>Link: <a href="https://tinyurl.com/yxrlo88o">https://tinyurl.com/yxrlo88o</a></em></li>
+
+        <li><strong>Third-party Apple developers are increasingly restive, but the company's stock remains unstoppable.</strong> The popular game <strong>Fortnite</strong> continued its recent jihad against Apple's 30 percent tax on in-app purchases, launching a tournament to award a newly created <strong>#FreeFortnite Cup</strong>. (<em>Link: <a href="https://tinyurl.com/y3lh2wmf">https://tinyurl.com/y3lh2wmf</a></em>) Concern is growing throughout the tech industry about whether Apple's practices raise antitrust concerns, especially on its tightly controlled mobile platforms. In a new blog post, tech analyst <strong>Benedict Evans</strong> flipped a metaphor that Apple famously used in its early days to portray itself as a band of rebels. Evans writs: "Apple isn’t the pirates anymore -- it’s the navy, the port and the customs house." (<em>Link: <a href="https://tinyurl.com/y6duhd5s">https://tinyurl.com/y6duhd5s</a></em>) Legendary developer <strong>Dave Winer</strong>, who's built apps atop various Apple platforms since the 1970s, offered an even blunter assessment on his blog: "Apple hates devs, always has." (<em>Link: <a href="https://tinyurl.com/y4c4ugth">https://tinyurl.com/y4c4ugth</a></em>) However, the controversy hasn't deterred Wall Street, which bid up Apple shares on the week, pushing the company's valuation over $2 trillion. Apple is the first company in history to reach that milestone figure, which is roughly equivalent to the annual gross domestic product of <strong>Italy</strong>. (<em>Link: <a href="https://tinyurl.com/nluydn2">https://tinyurl.com/nluydn2</a></em>)</li>
+
+        <li>The Columbia Journalism Review's <strong>Tim Schwab</strong> says <strong>National Public Radio</strong> and other U.S. news organizations have been treating tech entrepreneur-turned-philantrhopist <strong>Bill Gates</strong> with kid gloves in their coverage. The situation underscores ethical pitfalls of using philanthropy to fund journalism at a time when many organizations are looking for alternatives to advertising revenue. Schwab writes. <em>Link: <a href="https://tinyurl.com/yylt4bmo">https://tinyurl.com/yylt4bmo</a></em></li>
+
+        <li>Finally, <a href="https://twitter.com/moodvintage/status/1297371742290272256/photo/1">here's a pic</a> of a <strong>Concorde</strong> over <strong>Lower Manhattan</strong> in 1980. Not really newsworthy, obviously, but it was just too cool <em>not</em> to share. 😀 <em>Link: <a href="https://tinyurl.com/yy8c9x4e">https://tinyurl.com/yy8c9x4e</a></em></li>
+
+
+
+
 
       </ul>
 
