Adding final copy for 8/30/20 newsletter

--- a/newsletter/2020-08-30.html
+++ b/newsletter/2020-08-30.html
@@ -56,19 +56,29 @@
 
       <br>
 
-      <p>The latest headlines:</p>
+      <p><strong>At present, it's common to meet someone in tech</strong> whose interest in gadgets and computers was sparked in childhood by <strong>Star Wars</strong> or similar sci-fi movies from past decades.</p>
+
+      <p>Similarly, I believe we will someday soon see a wave of technologists, many of them Black or from other underrepresented groups, whose imaginations were ignited early on by <strong>Black Panther</strong> in 2018. Consider that the movie <strong>grossed over $1 billion</strong> -- a <a href="https://www.investopedia.com/terms/u/unicorn.asp">unicorn</a> in Silicon Valley startup terms -- and was beloved around the world. Its cultural impact ran <em>that</em> deep.</p>
+
+      <p>Hence the tragic loss of <strong>Chadwick Boseman</strong> on Friday at just 43 years old was a real loss for the tech industry in a way I hope everyone in it appreciates. In his way, Boseman was probably more effective at promoting diversity in tech than all the Big Tech executives combined who perennially talk a good game but mysteriously can't ever get the share of Black people among their employees above a <a href="https://www.wired.com/story/five-years-tech-diversity-reports-little-progress/">single-digit percentage</a>.</p>
+
+      <p>It's also beyond remarkable that Boseman's work sparked joy for millions, all while he privately faced down a deadly disease himself without ever uttering a word about it publicly. That's real heroism, no special effects required.</p>
+
+      <p>On a clearly related note, the entreprenship organization <strong>Black & Brown Founders</strong> recently announced it will host a virtual conference on diversity in tech dubbed <strong>Chroma</strong> from Sept. 28 to Oct. 2. For more information or to sign up to attend, please visit <a href="https://tinyurl.com/y4odxtbv">https://tinyurl.com/y4odxtbv</a></p>
+
+      <p>In other news:</p>
 
       <ul>
 
-        <li>Marketwatch's Arends: Don't bail on cities quite yet. https://www.marketwatch.com/story/fleeing-the-city-watch-out-it-may-be-a-false-economy-2020-08-25?reflink=mw_share_twitter</li>
+        <li><strong>Fidelity</strong>, one of the largest asset management firms in the U.S., filed paperwork with the <strong>Securities and Exchange Commission</strong> to launch a new fund dedicated to <strong>bitcoin</strong>. The minimum to invest in the fund will be $100,000 -- a relatively high figure that could keep many retail investors out. But if even a small fraction of the <strong>$8.3 trillion</strong> in client money that Fidelity manages ends up participating, the fund could nevertheless help to expand the overall audience for bitcoin significantly. (Forbes) <em>Link: <a href="https://tinyurl.com/yxgdz56m">https://tinyurl.com/yxgdz56m</a></em></li>
 
-        <li>Windows 95 turned 25: https://www.theverge.com/21398999/windows-95-anniversary-release-date-history</li>
+        <li><strong>Barry Silbert</strong>'s Digital Currency Group said it will <strong>invest $100 million into mining bitcoin</strong> and other cryptocurrencies in North America over the coming months through its Foundry unit. North America has lagged in mining activity the last few years, lagging in market share versus China and other regions where operating costs are lower. (Fortune) <em>Link: <a href="https://tinyurl.com/y6sgg68x">https://tinyurl.com/y6sgg68x</a></em></li>
 
-        <li>TKTKTK</li>
+        <li>America's <strong>Internal Revenue Service</strong> moved to include a very broad question about crypto activity on 2020 tax forms. Opponents complained the changes raise concerns about privacy and even free speech. (Decrypt) <em>Link: <a href="https://tinyurl.com/y3tlofc8">https://tinyurl.com/y3tlofc8</a></em></li>
 
-        <li>TKTKTK</li>
+        <li><strong>Windows 95</strong>, one of the defining products of the early dotcom bubble, turned 25 years old. (The Verge) <em>Link: <a href="https://tinyurl.com/y4u8vach">https://tinyurl.com/y4u8vach</a></em></li>
 
-        <li>TKTKTK</li>
+        <li>MarketWatch's <strong>Brett Arends</strong> weighed in on one of the big downsides of moving from cities to suburbs -- a change many workers in tech and finance are considering amid the recent coronavirus pandemic. Over time, the expense of car ownership may <strong>sap up to a half million dollars from one's savings</strong>, Arends writes. <em>Link: <a href="https://tinyurl.com/y46p4x54">https://tinyurl.com/y46p4x54</a></em></li>
 
       </ul>
 
