Adding story candidates for 3/7/21

--- a/newsletter/2021-03-07.html
+++ b/newsletter/2021-03-07.html
@@ -1,4 +1,23 @@
 <doctype html>
+  
+  <!-- 
+
+Some story candidates...
+
+- The newsletter has a new GitHub workflow.
+
+- Chip shortage is affecting all the major auto makers, with no end in sight. https://www.washingtonpost.com/technology/2021/03/01/semiconductor-shortage-halts-auto-factories/
+
+- NASA is using Linux to explore the surface of Mars. https://www.pcmag.com/news/linux-is-now-on-mars-thanks-to-nasas-perseverance-rover
+
+
+-->
+  
+  
+  
+  
+  
+  
 <html lang="en">
 
   <head>
@@ -55,8 +74,15 @@
         <p>The latest headlines:</p>
 
         <ul>
-
-
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
 
 
@@ -71,7 +97,7 @@
 <br>
 <hr>
 
-<p><em>Copyright 2020 (c), Indizr</em></p>
+<p><em>Copyright 2020-2021 (c), Indizr Hodlings LLC</em></p>
 
 </div>
 
