Adding a couple more story candidates.

--- a/newsletter/2021-03-07.html
+++ b/newsletter/2021-03-07.html
@@ -6,6 +6,10 @@ Some story candidates...
 
 - The newsletter has a new GitHub workflow.
 
+- Citi said in a research note Monday that bitcoin could one day “become the currency of choice for international trade.” https://www.cnbc.com/2021/03/01/bitcoin-btc-is-at-a-tipping-point-citi-says.html?utm_term=Autofeed&utm_medium=Social&utm_content=Main&utm_source=Twitter#Echobox=1614602529
+
+- From Slate's Future Tense project: Audience metrics show journalists how people behave, but not why. https://slate.com/technology/2021/03/imagined-audiences-journalism-analytics-intuition.html
+
 - Chip shortage is affecting all the major auto makers, with no end in sight. https://www.washingtonpost.com/technology/2021/03/01/semiconductor-shortage-halts-auto-factories/
 
 - NASA is using Linux to explore the surface of Mars. https://www.pcmag.com/news/linux-is-now-on-mars-thanks-to-nasas-perseverance-rover
