Adding some CoinDesk gems as story candidates

--- a/newsletter/2021-03-07.html
+++ b/newsletter/2021-03-07.html
@@ -6,6 +6,19 @@ Some story candidates...
 
 - The newsletter has a new GitHub workflow.
 
+
+- Enjin is creating two new offerings that aim to help NFTs manage gas fees as they scale. https://www.coindesk.com/enjin-to-tackle-soaring-gas-fees-scaling-with-new-blockchain-products
+
+- Mark Cuban will be the guest at the next Blockchain & Booze meetup. https://blockchainbooze.io/
+
+- Discussions.app announced plans to launch its reputation system exclusively on the Telos blockchain. https://martechseries.com/marketing-intelligence/discussions-app-launch-reputation-system-exclusively-telos-blockchain/
+
+- Jim Bianco says decentralized is "re-creating" the conventional financial system. It could even do for Wall Street what ride-sharing did for taxi companies, the Wall Street veteran said. https://www.coindesk.com/wall-street-veteran-jim-bianco-says-defi-is-recreating-the-financial-system
+
+- Crypto wallet maker Exodus is seeking SEC permission to do an on-chain sale of its shares. https://www.coindesk.com/crypto-wallet-exodus-seeks-sec-permission-to-tokenize-shares-aims-for-75m-raise
+
+- CoinDesk reports that PayPal is close to buying the crypto custody firm Curv for as much as $500 million. https://www.coindesk.com/paypal-to-buy-crypto-custody-firm-curv-sources
+
 - Citi said in a research note Monday that bitcoin could one day “become the currency of choice for international trade.” https://www.cnbc.com/2021/03/01/bitcoin-btc-is-at-a-tipping-point-citi-says.html?utm_term=Autofeed&utm_medium=Social&utm_content=Main&utm_source=Twitter#Echobox=1614602529
 
 - From Slate's Future Tense project: Audience metrics show journalists how people behave, but not why. https://slate.com/technology/2021/03/imagined-audiences-journalism-analytics-intuition.html
