Adding links re: Knight Media Forum, GitHub, etc.

--- a/newsletter/2021-03-07.html
+++ b/newsletter/2021-03-07.html
@@ -4,8 +4,11 @@
 
 Some story candidates...
 
-- The newsletter has a new GitHub workflow.
+- The newsletter has a new GitHub workflow. https://github.com/Indizr/web3weekly/commits/master/newsletter/2021-03-07.html
 
+- As part of the Knight Foundation's 2021 Media Forum, Microsoft President Brad Smith talked about the future of news with foundation President Alberto Ibaurgen. ((Watched event live. Pickup link from Vimeo once it's posted.))
+
+- A great video about bitcoin privacy: https://www.youtube.com/watch?v=JN1Bowgcle8
 
 - Enjin is creating two new offerings that aim to help NFTs manage gas fees as they scale. https://www.coindesk.com/enjin-to-tackle-soaring-gas-fees-scaling-with-new-blockchain-products
 
@@ -26,6 +29,8 @@ Some story candidates...
 - Chip shortage is affecting all the major auto makers, with no end in sight. https://www.washingtonpost.com/technology/2021/03/01/semiconductor-shortage-halts-auto-factories/
 
 - NASA is using Linux to explore the surface of Mars. https://www.pcmag.com/news/linux-is-now-on-mars-thanks-to-nasas-perseverance-rover
+
+- A japanese entrepreneur is recruiting a crew to send the first private-sector mission to the moon. https://www.space.com/yusaku-maezawa-dearmoon-contest-seeking-crewmembers
 
 
 -->
