Adding links re: new wall st crypto forays, etc.

--- a/newsletter/2021-03-07.html
+++ b/newsletter/2021-03-07.html
@@ -6,6 +6,30 @@ Some story candidates...
 
 - The newsletter has a new GitHub workflow. https://github.com/Indizr/web3weekly/commits/master/newsletter/2021-03-07.html
 
+- Kings of Leon Will Be the First Band to Release an Album as an NFT. (Rolling Stone) https://www.rollingstone.com/pro/news/kings-of-leon-when-you-see-yourself-album-nft-crypto-1135192/
+
+- Discover, the the third-largest U.S. credit-card company, is looking for a crypto products strategist. https://www.coindesk.com/discover-financial-planning-a-roadmap-for-crypto-blockchain-products
+
+- Charles Schwab is weighing the possibility of launching a crypto brokerage. https://www.theblockcrypto.com/daily/96950/charles-schwab-exploring-white-label-crypto-trading. 
+
+- Bitcoin could become the “currency of choice for international trade”, says Citi. https://www.theblockcrypto.com/post/96599/bitcoin-international-trade-currency-citi
+
+- Curv could fetch a purchase price of $500 million. https://www.coindesk.com/paypal-to-buy-crypto-custody-firm-curv-sources
+
+- Goldman Sachs is relaunching its crypto trading desk after a 3-year hiatus. https://www.coindesk.com/goldman-relaunches-crypto-desk
+
+- BitMEX Founder Arthur Hayes may surrender to U.S. law enforcement next month. https://www.coindesk.com/bitmex-ceo-arthur-hayes-may-surrender-to-us-law-enforcement-next-month
+
+- A small group of members from WallStreetBets is trying to turn it into a decentralized organization running on blockchain-based governance. https://decentralizewsb.com/
+
+- Fidelity published a whitepaper to explain to its clients the pros and cons of holding bitcoin in their portfolios. https://institutional.fidelity.com/app/literature/item/9901337.html?pos=T
+
+- The IRS clarified that buying crypto with fiat currency does not trigger its crypto reporting rules. https://www.coindesk.com/irs-1040-faq-buying-crypto-with-usd
+
+- Amazon's managed blockchain service now supports Ethereum. https://www.coindesk.com/amazon-managed-blockchain-at-last-supports-ethereum-ending-a-two-year-tease
+
+- MIT Tech Review: How to poison the data that Big Tech collects on you. https://www.technologyreview.com/2021/03/05/1020376/resist-big-tech-surveillance-data/
+
 - As part of the Knight Foundation's 2021 Media Forum, Microsoft President Brad Smith talked about the future of news with foundation President Alberto Ibaurgen. ((Watched event live. Pickup link from Vimeo once it's posted.))
 
 - A great video about bitcoin privacy: https://www.youtube.com/watch?v=JN1Bowgcle8
