Making some late, minor copyedits.

--- a/newsletter/2021-03-07.html
+++ b/newsletter/2021-03-07.html
@@ -57,11 +57,11 @@
 
         <p>In essence, this allows you to track my workflow as I add interesting links throughout the week, then write and edit the final version of the content to send out.</p>
 
-        <p>Essentially, this is an expanded use of the <a href="https://github.com/Indizr/web3weekly">repository</a> I've always maintained of the newsletter's HTML on GitHub. It was mostly there as a long-term archive before, but now I'm committing to using it regularly throughout the week as a drafting tool as well, so you can "watch" the content evolve over time if you wish. I'll also include a link to this revision history each week from here out.</p>
+        <p>This is an expanded use of the <a href="https://github.com/Indizr/web3weekly">repository</a> I've always maintained of the newsletter's HTML on GitHub. It was mostly there as a long-term archive before, but now I'm committing to using it regularly throughout the week as a drafting tool as well, so you can "watch" the content evolve over time if you wish. I'll also include a link to this revision history each week from here out.</p>
 
-        <p>This all builds upon an idea I've been toying with for a long time, to be honest. Back when I was a Wall Street Journal reporter in the aughts, I suggested to the newsroom's first social media coordinator that we should maintain and share publicly revision histories of our stories, Wikipedia style, to increase readers' trust in our work.</p>
+        <p>I've been toying with this idea for a long time, to be honest. Back when I was a Wall Street Journal reporter in the aughts, I suggested to the newsroom's first social media coordinator that we should maintain and share publicly revision histories of our stories, Wikipedia style, to increase readers' trust in our work.</p>
 
-        <p>People's trust in the press was already starting to wane in that era -- a trend that has only <a href="https://www.pbs.org/newshour/show/waning-trust-and-a-perilous-financial-landscape-challenge-the-news-business">mushroomed</a> since. I figured additional transparency into our daily workflow might help to remedy the problem. However, word came back that this approach would make the higher-ups too antsy at the time.</p>
+        <p>People's trust in the press was already starting to wane in that era -- a problem that has only <a href="https://www.pbs.org/newshour/show/waning-trust-and-a-perilous-financial-landscape-challenge-the-news-business">mushroomed</a> since. I figured additional transparency into our daily workflow might help to remedy the problem. However, word came back that this approach would make the WSJ higher-ups too antsy at the time.</p>
 
         <p>With the newsletter these days, I don't have that problem. So why not give it a shot, finally? ☺️</p>
 
@@ -71,7 +71,7 @@
 
         <ul>
 
-          <li><strong>Amazon's managed blockchain service now supports Ethereum.</strong> The <a href="https://www.coindesk.com/amazon-managed-blockchain-at-last-supports-ethereum-ending-a-two-year-tease">new integration</a> within the popular the popular Amazon Web Services suite should help enterprises experiment and adopt distributed applications more widely.</li>
+          <li><strong>Amazon's managed blockchain service now supports Ethereum.</strong> The <a href="https://www.coindesk.com/amazon-managed-blockchain-at-last-supports-ethereum-ending-a-two-year-tease">new integration</a> within the popular Amazon Web Services suite should help enterprises experiment and adopt distributed applications more widely.</li>
 
           <li><strong>The Internal Revenue Service clarified its crypto rules for individual investors.</strong> Buying crypto with fiat currency does not trigger the tax agency's crypto reporting rules, it said on a <a href="https://www.coindesk.com/irs-1040-faq-buying-crypto-with-usd">new FAQ page</a>.</li>
 
