Adding some story candidates for 3/14/21 edition.

--- a/newsletter/2021-03-14.html
+++ b/newsletter/2021-03-14.html
@@ -4,12 +4,25 @@
 
     Some story candidates...
 
-    - TK
-    - TK
-    - TK
+    - New bitcoin record above $60K. It's been handily beating every other type of investable asset in sight. https://finance.yahoo.com/news/bitcoin-2021-returns-destroy-everything-223544895.html
+
+    - A piece of digital art rendered as a non-fungible token sold for $69 million at auction. https://www.nytimes.com/2021/03/11/arts/design/nft-auction-christies-beeple.html
+
+    - A new Stanford report says AI is going industrial (https://www.axios.com/state-of-artificial-intelligence-stanford-university-f5d71c41-251e-4fb4-b9b2-89fdee48bb3c.html) Also a new database of AI mishaps was launched. https://incidentdatabase.ai/
+
+    - SUSE Group, a giant in the Linux community, filed to do an initial public offering in Europe. https://siliconangle.com/2021/03/11/linux-software-giant-suse-files-ipo-europe/
+
+    - National Basketball Association team owners created a new committee to study potential use cases for blockchain among the league's franchises. https://cointelegraph.com/news/basketball-billionaires-form-nba-blockchain-use-case-committee
 
 -->
 
+  
+  
+  
+  
+  
+  
+  
 <html lang="en">
 
   <head>
